# exohunter

./: .gitignore  ACCURACY_RESULTS.md  CHANGELOG.md  CONTRIBUTING.md  DATABASE_IMPLEMENTATION_SUMMARY.md  DEPLOYMENT_GUIDE.md  Dockerfile  FEATURE_COMPATIBILITY_SOLVED.md  Makefile  QUICK_REFERENCE.md  README.md  SUCCESS_SUMMARY.md  WEBAPP_INTEGRATION_COMPLETE.md  __init__.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  setup_models.py  test_api.py
.github/workflows/: ci.yml
data/: __init__.py  combined_training.csv  example_toi.csv  exoplanet_features_template.csv  exoplanets_combined.csv  ingest.py  k2_candidates.csv  k2_candidates_cleaned.csv  kepler_koi.csv  kepler_koi_cleaned.csv  labels.py  results.csv  tess_toi.csv  tess_toi_cleaned.csv  test_clean.csv  test_dataset.csv  train.csv
deploy/: README.md  init.sql  nginx.conf
docs/: API_INTEGRATION_GUIDE.md  DEVELOPER_GUIDE.md  USER_GUIDE.md
exohunter/: __init__.py
exohunter/data/: __init__.py
exohunter/db/: __init__.py  models.py
exohunter/models/: __init__.py  advanced.py  ensemble.py  evaluate.py
models/: COMPREHENSIVE_ANALYSIS.md  TEST_RESULTS.md  ULTIMATE_ENSEMBLE_README.md  ULTIMATE_ENSEMBLE_SUMMARY.md  __init__.py  analyze_model_performance.py  create_stacking_ensemble.py  error_analysis.csv  feature_importance_detailed.csv  hyperparameter_tuning.py  improvement_analysis.json  test_metrics.json  test_predictions.csv  test_ultimate_ensemble.py  train_ultimate_ensemble.py  training_results_20251004_155128.json  training_results_20251005_200911.json  ultimate_ensemble_metrics.json
models/optimized_training_results/trained_models/: lightgbm_20251005_183030.joblib
models/trained_models/: K2_xgb_exoplanet_model.joblib  Keplar_xgb_exoplanet_model.joblib  TOI_xgb_exoplanet_model_82.joblib  lightgbm_20251005_200911.joblib  scaler_20251004_155128.joblib  scaler_20251005_200911.joblib  xgboost_k2_model_98.joblib  xgboost_koi_model_94.joblib
notebooks/: EDA.ipynb  NASA.ipynb
notebooks/datasets/: test.csv
notebooks/datasets/lightcurves/: TOI_270.csv
presentation/: demo_script.md
scripts/: README.md  batch_predict.py  build_release.sh  calculate_accuracy.py  comprehensive_test.py  data_cleaning.py  generate_changelog.sh  optimized_training.py  performance_analysis.py  retrain_models.cmd  test_all_models.py  test_release_system.sh  train_new_models.cmd  train_on_train_csv.py  verify_deployment.py  version.sh  visualize_test_results.py
test_results/: TESTING_COMPLETE.txt  comprehensive_test_20251005_202035.json
tests/: __init__.py  conftest.py  test_api.py  test_ingest.py  test_labels.py  test_model_performance.py  test_preprocessing.py  test_train.py
tests/performance_results/: README.md  random_forest_20251003_115050.json  random_forest_20251003_115208.json  random_forest_detailed_20251003_115050.json  random_forest_detailed_20251003_115208.json  xgboost_20251003_115212.json  xgboost_detailed_20251003_115213.json
web/: ENHANCEMENT_SUMMARY.md  FINAL_FIXES_SUMMARY.md  PICKLE_FIX.md  QUICK_START.md  README.md  WEB_IMPROVEMENTS.md  WINDOWS_FIXES.md  __init__.py  requirements.txt
web/api/: __init__.py  dependencies.py  ensemble_integration.py  main.py  models.py  test_api_with_ultimate_model.py
web/api/routers/: __init__.py  predictions.py
web/frontend/: Dockerfile  README.md  index.html  nginx.conf  package.json  vite.config.js
web/frontend/sample-data/: exoplanet_features.csv  lightcurve_transit.csv
web/frontend/src/: App.jsx  index.css
web/frontend/src/components/: FileUpload.jsx  LightCurveChart.jsx  ManualEntry.jsx  PredictionResults.jsx
web/models/: selected_features_20251005_200911.json
web/models/trained_models/: extra_trees_20251004_155128.joblib  optimized_xgb_20251005_183030.joblib
web/shared/: __init__.py  config.py  logging_config.py  schemas.py  utils.py
web/streamlit/: README.md  __init__.py  app.py
web/streamlit/components/: prediction_form.py  visualization.py
web/streamlit/utils/: __init__.py  api_client.py
(+1 files in other folders)
